<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovie">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image_cover"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_image_black_24dp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="85dp"
                android:layout_height="96dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_image_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_cover" />

            <TextView
                android:id="@+id/text_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nama_movie"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/image_poster"
                app:layout_constraintTop_toBottomOf="@+id/image_cover" />

            <TextView
                android:id="@+id/text_rilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/tahun_rilis"
                app:layout_constraintStart_toEndOf="@id/image_poster"
                app:layout_constraintTop_toBottomOf="@id/text_judul" />

            <TextView
                android:id="@+id/text_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="@+id/text_rilis"
                app:layout_constraintTop_toBottomOf="@+id/text_rilis" />

            <TextView
                android:id="@+id/text_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_deksripsi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/image_poster"
                app:layout_constraintTop_toBottomOf="@id/image_poster" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>